--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-tab-view": "^3.1.1",
     "expo-image-picker": "~13.3.1",
-    "expo-location": "~14.3.0"
+    "expo-location": "~14.3.0",
+    "react-native-maps": "0.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
