--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-bouncy-checkbox": "^3.0.4",
+    "react-native-maps": "0.31.1",
     "react-native-pager-view": "^6.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-tab-view": "^3.1.1",
-    "expo-image-picker": "~13.3.1",
-    "expo-location": "~14.3.0",
-    "react-native-maps": "0.31.1"
+    "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
