--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "오늘여기",
-    "slug": "오늘여기",
+    "slug": "hearToday",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,8 +22,23 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE", 
+        "FOREGROUND_SERVICE"
+      ],
+      "package": "com.y8nju.hearToday",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAwu3irzU1v9B4A-BFuXeuh6aZOzAaD3sY"
+        }
       }
     },
     "web": {
@@ -37,6 +52,11 @@
           "CameraPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "1fefa7d8-22ce-40ec-90b2-e6454e4d9ac7"
+      }
+    }
   }
 }
